--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.4.2",
     "react-native-vector-icons": "^6.4.2",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.12",
     "resolve": "1.6.0",
     "url-loader": "0.6.2"
   },
